--- a/onlinecourse/templates/onlinecourse/exam_result_bootstrap.html
+++ b/onlinecourse/templates/onlinecourse/exam_result_bootstrap.html
@@ -39,16 +39,49 @@
     {% if grade > 80 %}
     <div class="alert alert-success">
        <!--HINT Display passed info -->
+       <strong>Congratulations, {{user.first_name}}!</strong> You passed the exam and completed the course with score {{grade}}/100 
     </div>
         {% else %}
         <div class="alert alert-danger">
             <!--HINT Display failed info -->
+            <strong>Failed</strong> Sorry, {{user.first_name}}! You have failed exam with score {{grade}}/100
         </div>
         <a class="btn btn-link text-danger" href="{% url 'onlinecourse:course_details' course.id %}">Re-test</a>
         {% endif %}
         <div class="card-columns-vertical mt-1">
         <h5 class="">Exam results</h5>
             <!--HINT Display exam results-->
+        {% for lesson in lessons %}
+            <div class="card mt-1">
+                {% for question in lesson.question_set.all %}
+                <div class="card mt-1">
+                    <div class="card-header"><h5>{{question.text}}</h5></div>
+                    <div class="collapse">
+                        Click to expand elements within the collapse div
+                    </div>
+                    <div class="card-body">
+                        {% for choice in question.choice_set.all %}
+                            <div class="form-check">
+                                <label class="form-check-label">
+                                    {% if choice.is_correct is 1 %}
+                                        <h6 style="color: #3faf55;">Correct answer : {{ choice.choice_text }}</h6>
+                                    {% endif %}
+                                    {% if choice.is_correct is 0 %}
+                                        <h6 style="color: red;">Wrong answer : {{ choice.choice_text }}</h6>
+                                    {% endif %}
+                                </label>
+                            </div>
+                        {% endfor %}
+                        <div class="form-check">
+                            <h6>Yes</h6>
+
+                        </div>
+                    </div>
+                </div>
+                {% endfor %}
+
+            </div>
+        {% endfor %}
         </div>
     </div>
 </body>
